# fps-monitor-overlay

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  config.ini.example
.github/workflows/: build.yml  manual-build.yml  release.yml
_codeql_build_dir/: Makefile
resources/themes/: clean_minimal.json  cyberpunk.json  matrix_green.json  stealth_dark.json
src/: main.cpp
src/core/: config.cpp  config.h  drop_detector.cpp  drop_detector.h  fps_calculator.cpp  fps_calculator.h  ring_buffer.h  stats_tracker.cpp  stats_tracker.h
src/detection/: game_detector.cpp  game_detector.h  window_tracker.cpp  window_tracker.h
src/overlay/: d2d_renderer.cpp  d2d_renderer.h  graph_renderer.cpp  graph_renderer.h  text_renderer.cpp  text_renderer.h  theme_manager.cpp  theme_manager.h  window_manager.cpp  window_manager.h
src/utils/: logger.cpp  logger.h  timer.cpp  timer.h  tray_icon.cpp  tray_icon.h
